# SimpBangumi

./: .gitignore  LICENSE  README.md  README_EN.md  index.html  legacy.html  notify.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  code.ts  main.ts  notify.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  bangumi.rs  diagnostics.rs  lib.rs  main.rs  mal_scraper.rs
src/api/: Tenrai.ts  auth.ts  bangumi.ts
src/components/: BbcodeSummary.vue  BroadcastNotifyToast.vue  BroadcastProgress.vue  LinkConfirmModal.vue  Live2dCompanion.vue  Pager.vue  ScoreDebugPanel.vue  TitleBar.vue  WorkersCommunicationModal.vue
src/composables/: useAuth.ts  useBangumi.ts  useBroadcastNotify.ts  useDiagnostics.ts  useHome.ts  useLinkInterceptor.ts  usePagination.ts
src/stores/: app.ts  data.ts  session.ts
src/tauri/: windowControls.ts
src/utils/: animeMatch.ts  autoLink.ts  bbcode.ts  broadcastTiming.ts  datetime.ts  imageCompare.ts  romaji.ts  timeCheck.ts
src/views/: Character.vue  Collections.vue  Complete.vue  Person.vue  Schedule.vue  Search.vue  Settings.vue  Timeline.vue  Welcome.vue
src/views/settings/: AboutSettings.vue  BroadcastSettings.vue  DeveloperSettings.vue  DisplaySettings.vue  SettingsHome.vue  UpdateSettings.vue  WebLoginSettings.vue
