[package]
name = "bangumi-client"
version = "0.1.0"
description = "SimpBangumi"
authors = ["you"]
edition = "2021"

[lib]
name = "bangumi_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
reqwest = { version = "0.12", features = ["json"] }
time = "0.3"
url = "2"
base64 = "0.22"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }
